tests/helm/istio-system/certs.yaml
apiVersion: certmanager.k8s.io/v1alpha1
kind: Certificate
metadata:
  name: test-certs
  namespace: istio-system
spec:
  secretName: istio-ingressgateway-certs-fortiotls
  issuerRef:
    name: letsencrypt
    kind: ClusterIssuer
  commonName: fortiotls.v10.istio.webinf.info
  dnsNames:
  - fortiotls.v10.istio.webinf.info
  acme:
    config:
    - http01:
        ingressClass: istio
      domains:
      - fortiotls.v10.istio.webinf.info
---
apiVersion: certmanager.k8s.io/v1alpha1
kind: Certificate
metadata:
  name: fortionoistio
  namespace: istio-system
spec:
  secretName: istio-ingressgateway-certs-fortionoistio
  issuerRef:
    name: letsencrypt
    kind: ClusterIssuer
  commonName: fortionoistio.v10.istio.webinf.info
  dnsNames:
  - fortionoistio.v10.istio.webinf.info
  - fortionoistio1.v10.istio.webinf.info
  acme:
    config:
    - http01:
        ingressClass: istio
      domains:
      - fortionoistio.v10.istio.webinf.info
      - fortionoistio1.v10.istio.webinf.info
