tests/helm/istio-system/ingress-gatway.yaml
# Pointing to the separate istio:ingress LB
# Could also be pointed to the main gateway
#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-autogenerated-k8s-ingress
  namespace: istio-system
spec:
  selector:
#    istio: ingress
    istio: ingressgateway
  servers:
  - port:
      number: 80
      protocol: HTTP
      name: http
    hosts:
    - "*"
